Bug 267346 - [WGSL] shader,execution,expression,call,builtin,unpack2x16unorm:* is failing
Summary: [WGSL] shader,execution,expression,call,builtin,unpack2x16unorm:* is failing
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebGPU (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Tadeu Zagallo
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2024-01-10 07:52 PST by Tadeu Zagallo
Modified: 2024-01-11 01:01 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tadeu Zagallo 2024-01-10 07:52:19 PST
...
Comment 1 Radar WebKit Bug Importer 2024-01-10 07:52:30 PST
<rdar://problem/120784740>
Comment 2 Tadeu Zagallo 2024-01-10 07:54:13 PST
Pull request: https://github.com/WebKit/WebKit/pull/22596
Comment 3 EWS 2024-01-11 01:01:15 PST
Committed 272905@main (5d9c9738a866): <https://commits.webkit.org/272905@main>

Reviewed commits have been landed. Closing PR #22596 and removing active labels.