[WGSL] shader,execution,expression,call,builtin,unpack2x16unorm:* is failing https://bugs.webkit.org/show_bug.cgi?id=267346 rdar://120784740

Reviewed by Mike Wyrzykowski.

There was a typo and the packed value was being converted to two `int16_t`s instead
of `uint16_t`s.

* Source/WebGPU/WGSL/ConstantFunctions.h:
(WGSL::CONSTANT_FUNCTION):

Canonical link: https://commits.webkit.org/272905@main